Service/src/main/java/org/example/error/ArtistValidationException.java
package org.example.error;

public class ArtistValidationException extends Exception {
    public ArtistValidationException(String message) {
        super(message);
    }
}
